add tenant package test